--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -102,6 +102,9 @@ img {
 .main-content form .checkbox-btn {
   display: none;
 }
+.main-content form label {
+  display: block;
+}
 .main-content form .card {
   text-align: left;
   padding: 20px;
@@ -121,6 +124,7 @@ img {
   font-size: 20px;
   margin-top: 19px;
   color: #1388e7;
+  height: 50px;
 }
 .main-content form .card .card-text {
   font-size: 16px;
